# ghidra-version-manager

./: Cargo.toml  Changelog.md  README.md  build.rs  rust-toolchain.toml  todo.md
extensions-repo/: arch-4004.toml  arch-allegrex.toml  arch-alpha.toml  arch-amiga.toml  arch-c166.toml  arch-csky.toml  arch-efi.toml  arch-hexagon.toml  arch-irisc.toml  arch-m16c.toml  arch-mcore.toml  arch-nanomips.toml  arch-nds32.toml  arch-niosii.toml  arch-pdk.toml  arch-picoblaze.toml  arch-rl78.toml  arch-rx.toml  arch-score7.toml  arch-stm8.toml  exporter-binexport.toml  exporter-delinker.toml  loader-dtb.toml  loader-ntr.toml  loader-xbe.toml  other-amiga.toml  tool-assistmcp.toml  tool-findcrypt.toml  tool-notepad.toml
res/: macos_plist.plist
src/: cache.rs  exit_codes.rs  extensions.rs  ghidra_props_parser.rs  install.rs  main.rs  update_checker.rs  update_notification.rs
src/args/: args.rs  arguments.rs  cmd.rs  default_subcommand.rs  mod.rs  prefs_subcommand.rs  settings_subcommand.rs
src/prefs_backup/: backup_generator.rs  backup_restorer.rs  gvm_config.rs  mod.rs
