[package]
name = "gvm"
version = "0.2.1"
edition = "2024"

[dependencies]
octocrab = { version = "=0.44.1", default-features = false, features = ["follow-redirect", "retry", "rustls", "timeout", "tracing", "default-client", "rustls-ring"] }
tokio = { version = "=1.46.1", default-features = false, features = ["macros", "rt-multi-thread", "fs", "tracing"] }
tracing-subscriber = { version = "=0.3.19", default-features = false, features = ["env-filter", "fmt", "std", "ansi"] }
tracing = { version = "=0.1.41", default-features = false, features = ["std"] }
clap = { version = "=4.5.41", default-features = false, features = ["derive", "std", "color", "error-context", "unicode", "usage", "suggestions", "help", "deprecated"] }
anyhow = { version = "=1.0.98", default-features = false, features = ["std", "backtrace"] }
reqwest = { version = "=0.12.22", default-features = false, features = ["stream", "rustls-tls", "gzip", "deflate", "brotli", "zstd"] }
futures-util = { version = "0.3.31", default-features = false, features = ["std"] }
indicatif = { version = "=0.18.0", default-features = false, features = ["improved_unicode"] }
zip = { version = "=4.3.0", default-features = false, features = ["deflate"] }
toml = { version = "=0.9.2", default-features = false, features = ["std", "display", "parse", "serde"] }
serde = { version = "=1.0.219", default-features = false, features = ["derive", "std"]}
chrono = "=0.4.41"
notify-rust = "=4.11.7"

include_directory = {version = "=0.1.1", default-features = false, features = ["glob"]}
flate2 = {version = "=1.1.2", default-features = false, features = ["zlib-rs"]}
tar = {version = "=0.4.44", default-features = false, features = []}
ico = {version = "=0.4.0" }